--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "stage-0"
   ],
   "plugins": [
+    ["import", { "libraryName": "antd", "style": "css" }],
     "react-hot-loader/babel"
   ],
   "env": {
