--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router": "^2.4.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4"
   },
