--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux": "^3.5.2",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.1.0",
-    "sanitize-html": "^1.11.4"
+    "sanitize-html": "^1.11.4",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "ava": "^0.15.2",
