--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.9.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.15.1",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
@@ -37,8 +38,11 @@
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.3.0",
     "limax": "^1.3.0",
-    "mongoose": "^4.4.20",
+    "mongoose": "^4.9.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
