--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "compression": "^1.6.2",
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
+    "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.3.0",
     "limax": "^1.3.0",
+    "material-ui": "^0.17.3",
     "mongoose": "^4.9.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
