--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4",
-    "validator": "^7.0.0"
+    "validator": "^7.0.0",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "ava": "^0.15.2",
