--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "body-parser": "^1.15.1",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
+    "express-session": "^1.15.2",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
