--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prop-types": "^15.5.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-flexbox-grid": "^1.1.3",
     "react-helmet": "^5.0.3",
     "react-intl": "^2.2.3",
     "react-redux": "^4.4.5",
