--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch:test": "npm run test -- --watch",
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "start": "cross-env BABEL_DISABLE_CACHE=1 NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production MONGO_URL=mongodb://admin:KLhgpWPhs7OPSgxr@cluster0-shard-00-00-iftva.mongodb.net:27017,cluster0-shard-00-01-iftva.mongodb.net:27017,cluster0-shard-00-02-iftva.mongodb.net:27017/lifting_log?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin node index.js",
     "start:prod": "cross-env NODE_ENV=production node index.js",
     "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
@@ -57,9 +57,7 @@
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4",
-    "validator": "^7.0.0"
-  },
-  "devDependencies": {
+    "validator": "^7.0.0",
     "ava": "^0.15.2",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
